//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table timeslot {
  id Int [pk, increment]
  start DateTime [not null]
  end DateTime [not null]
  festival_day_id Int [not null]
  volunteers_assigned volunteer_assignments [not null]
  festival_day festival_day [not null]
}

Table volunteer {
  id String [pk]
  username String [unique, not null]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  password String [not null]
  isAdmin Boolean [not null, default: false]
  assignments volunteer_assignments [not null]
}

Table zone {
  id Int [pk, increment]
  name String [not null]
  festival_id String [not null]
  nb_volunteers Int [not null, default: 0]
  festival festival [not null]
  volunteer_assignments volunteer_assignments [not null]
}

Table festival {
  id String [pk]
  name String [not null]
  year Int [not null]
  active Boolean [not null, default: false]
  duration Int [not null]
  festival_days festival_day [not null]
  zones zone [not null]
}

Table festival_day {
  id Int [pk, increment]
  festival_id String [not null]
  date DateTime [not null]
  open_at DateTime [not null]
  close_at DateTime [not null]
  festival festival [not null]
  timeslots timeslot [not null]
}

Table volunteer_assignments {
  volunteer_id String [not null]
  zone_id Int [not null]
  timeslot_id Int [not null]
  volunteer volunteer [not null]
  zone zone [not null]
  timeslot timeslot [not null]

  indexes {
    (volunteer_id, zone_id, timeslot_id) [pk]
  }
}

Ref: timeslot.festival_day_id > festival_day.id [delete: Cascade]

Ref: zone.festival_id > festival.id [delete: Cascade]

Ref: festival_day.festival_id > festival.id [delete: Cascade]

Ref: volunteer_assignments.volunteer_id > volunteer.id [delete: Cascade]

Ref: volunteer_assignments.zone_id > zone.id [delete: Cascade]

Ref: volunteer_assignments.timeslot_id > timeslot.id [delete: Cascade]